Revision history for Perl extension Text::Table.

1.132   Unknown
    - Fix a syntax error in the POD.
        - https://rt.cpan.org/Ticket/Display.html?id=118852
        - Thanks to Rihards for the report.

1.131   2016-07-29
    - Merge pull-request from Zac Bentley to speed up boolean tests.
        - https://github.com/shlomif/Text-Table/pull/4
        - Closes https://github.com/shlomif/Text-Table/issues/3

1.130   2014-04-12
    - Minimum perl version in 'requires' this time in META.yml (CPANTS).
    - Change the META.yml license indicator to 'mit' - it is the ISC
    license, which is MIT in effect. (CPANTS).

1.129   2014-02-01
    - Add minimum perl version to META.yml (CPANTS).

1.128   2013-10-25
    - Typo fixes thanks to David Steinbrunner.
        - https://github.com/shlomif/Text-Table/pull/1

1.127   2013-05-21
    - Add t/style-trailing-space.t.
        - Remove trailing space.

1.126   2012-09-23
    - Fix handling of regular expression aligners.
        - Thanks to Ilya for the report.
        - Fixes https://rt.cpan.org/Ticket/Display.html?id=79803

1.125   2012-09-01
    - Add examples/Text-Table-UTF8-example.pl
        - Thanks to Lady_Aleena for inspiring it.

1.124   2011-09-02
    - Fix handling whitespace in column separators when the callback-based
    rule is invoked.
        - Thanks to Cary Millsap for the bug report.

1.123   2011-06-10
    - Add ./Build to MANIFEST.SKIP so it won't be packaged.
        - Thanks to Zed Pobre.

1.122   2011-06-03
    - Fix https://rt.cpan.org/Public/Bug/Display.html?id=68631 - passing
    hashrefs as separators.
    - Many refactorings.

1.121   2011-05-26
    - Convert t/10_Table.t to Test-Count.
    - Refactored t/10_Table.t .
    - Refactored lib/Text/Table.pm

1.120   2011-05-14
    - Convert the build system to Module::Build :
        - Build.PL and inc/Test/Run/Builder.pm .
    - Made the README more meaningful and concise (instead of a copy-and-paste
    from the documentation.)