@@ -1,23 +1,0 @@
-.gitignore
-Build.PL
-Changes
-examples/Text-Table-UTF8-example.pl
-inc/Test/Run/Builder.pm
-lib/Text/Table.pm
-LICENSE
-Makefile.PL
-MANIFEST
-MANIFEST.SKIP
-META.json
-META.yml
-README
-t/01_ini.t
-t/10_Table.t
-t/11_Variable_Rule.t
-t/12_column_seps_as_hashes.t
-t/13_callback_rules_with_whitespace.t
-t/14_overload.t
-t/cpan-changes.t
-t/pod-coverage.t
-t/pod.t
-t/style-trailing-space.t
