@@ -1,0 +1,39 @@
+name    = Text-Table
+author  = Shlomi Fish <shlomif@cpan.org>
+license = ISC
+copyright_holder = Anno Siegel and others
+copyright_year   = 2002
+
+[@Filter]
+-bundle = @Basic
+-remove = License
+-remove = Readme
+[AutoPrereqs]
+[Keywords]
+keyword = art
+keyword = ascii
+keyword = asciiart
+keyword = borders
+keyword = table
+keyword = text
+keyword = unicode
+[MetaProvides::Package]
+[MetaResources]
+bugtracker.web = http://rt.cpan.org/NoAuth/Bugs.html?Dist=Text-Table
+bugtracker.mailto = bug-text-table@rt.cpan.org
+repository.url = ssh://git@github.com:shlomif/perl-Text-Table.git
+repository.web = https://github.com/shlomif/perl-Text-Table
+repository.type = git
+[ModuleBuild]
+[MetaJSON]
+[PodSyntaxTests]
+[PodCoverageTests]
+[PodWeaver]
+[PruneFiles]
+match = ^rejects/
+[RewriteVersion]
+[Test::Compile]
+fake_home = 1
+skip = bump-ver|tag-release|run_agg_tests
+[Test::CPAN::Changes]
+[Test::Kwalitee::Extra]
