@@ -10,9 +10,7 @@ use List::Util qw(sum max);
 
 use Text::Aligner qw(align);
 
-BEGIN {
-    our $VERSION = '1.131';
-}
+our $VERSION = '1.131';
 
 use overload (
     # Don't stringify when only doing boolean tests, since stringification can
